# bettered

./: .pylintrc  README.md  __main__.py  betterRED.py  better_red.py  bettered.py  example_config.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Pytest.yaml  pylint.yml  pytest.yml
better_red/: config.py
bettered/: __init__.py  album.py  config.py  transcode.py
test/: test_config.py
