[tool.poetry]
name = "bettered"
version = "1.0.1"
description = "Automatic helper for redacted better.php."
authors = ["Jacob Pavlock <jtpavlock@gmail.com>"]
repository = "https://github.com/jtpavlock/bettered"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
bettered = 'bettered:main'

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
moe-transcode = "^0.1.3"

[tool.poetry.group.test.dependencies]
debugpy = "^1.4.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"

[tool.poetry.group.lint.dependencies]
black = "^22.6.0"
commitizen = "^2.17.12"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-alphabetize = "^0.0.17"
flake8-bugbear = "^22.7.1"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.5.0"
flake8-pytest-style = "^1.6.0"
flake8-use-fstring = "^1.1"
"github3.py" = "^3.2.0"
isort = "^5.10.1"
mccabe = "^0.7.0"
pre-commit = "^2.6.0"
pyright = "^1.1.267"

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
log_cli_level = 10
addopts = "--color=yes"
markers = [
    "network: tests that make network calls",
    "darwin: tests that should only run on apple",
    "linux: tests that should only run on linux",
    "win32: tests that should only run on windows"
]

[tool.pyright]
exclude = [
    "tests"
]
pythonPlatform = "All"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
